# tokenprob

./: ADVANCED_METHODS_README.md  CODEBERT_README.md  COMPARISON_STUDY_README.md  FIXES.md  IMPLEMENTATION_SUMMARY.md  LECPROMPT_README.md  LLM.py  METHODS_OVERVIEW.md  PROJECT_OVERVIEW.md  README.md  USAGE_GUIDE.md  VISUALIZATION_ISSUES.md  codebert_error_detector.py  codet5_validator.py  example_usage.py  fix_vis.md  forced_generation_analyzer.py  forced_visualizer.py  generate_detailed_visualizations.py  humaneval_runner.py  logical_error_detector.py  migrate_forced_visualizations.py  model_compatibility_report.md  nomic_validator.py  pyproject.toml  quick_test_forced.py  regenerate_humaneval_visualizations.py  requirements.txt  run_advanced_methods_full.slurm  run_analysis.py  run_error_detection.py  run_newsql.slurm  run_quick_test.sh  run_symbolic_analysis.py  symbolic_analyzer.py  test_advanced_methods.py  test_all_models.py  test_buggy_vs_correct.py  test_codebert_detector.py  test_examples.py  (+12 more)
comparison/: __init__.py  advanced_comparison_runner.py  advanced_visualizer.py  benchmark_runner.py  comparison_visualizer.py  detailed_comparison_visualizer.py  report_generator.py  statistical_analyzer.py  token_level_visualizer.py
detectors/: __init__.py  advanced_methods.py  base_detector.py  codet5_detector.py  deepseek_detector.py  starcoder2_detector.py
