[project]
name = "tokenprob"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bitsandbytes>=0.48.1",
    "datasets>=4.1.1",
    "ipython>=9.5.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.1",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0",
    "transformers>=4.56.2",
]
